force-app/main/default/objects/WeeklyReport__c/WeeklyReport__c.object-meta.xml
<CustomObject>
    <label>Weekly Report</label>
    <nameField>
        <label>Weekly report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>