force-app/main/default/objects/WeeklyReport__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <formula>UPPER(
  RIGHT(FileName__c, LEN( FileName__c ) - FIND(&quot;.&quot;, FileName__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension</label>
    <type>Text</type>
</CustomField>