force-app/main/default/objects/WeeklyReport__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Path</label>
    <length>250</length>
    <type>Text</type>
</CustomField>