force-app/main/default/objects/WeeklyReport__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EVENTSMANAGED</fullName>
                <label>Events managed</label>
            </value>
            <value>
                <fullName>EVENTSUNMANAGED</fullName>
                <label>Events not managed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>