force-app/main/default/objects/WeeklyReport__c/listViews/My_Weekly_Reports.listView-meta.xml
<ListView>
    <fullName>My_Weekly_Reports</fullName>
    <columns>NAME</columns>
    <columns>Extension__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Weekly Reports</label>
</ListView>